# scraping-wellhub

./: Dockerfile  README.md  gyms_franca_wellhub.csv  pyproject.toml  requirements.txt
wellhub/: config.py  database.py  gyms_franca_wellhub.csv  main.py  scraper.py  utils.py
